Fixed logo to be behind modals

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -107,7 +107,7 @@ a.footer_link {
 #site_logo {
 	position: fixed;
 	top: 0;
-	z-index: 9000;
+	z-index: 1031;
 	
 	> img {
 		height: 170px;
